fix bad z-index behaviour of chrome

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,6 +27,7 @@ a.card:hover
 .track-item-modal, .route-modal
 {
     z-index: 100;
+    position: relative;
 }
 
 .track-container.dragover
